--- a/HTML_and_CSS/Lesson10/Lesson10.html
+++ b/HTML_and_CSS/Lesson10/Lesson10.html
@@ -8,7 +8,46 @@
 
 <h1>Creating Forms</h1>
 
+<form method="POST" action="form.aspx" >
 
+<p>
+  <label>Customer name: <input type="text" id="customerName" name="customerName" maxlength="20" >
+</p>
+
+<fieldset>
+  <legend>Pizza Size</legend>
+  <p><label> <input type="radio" name="size" value="small"> Small (20 cm)</label></p>
+  <p><label> <input type="radio" name="size" value="medium" checked> Medium (30 cm)</label></p>
+  <p><label> <input type="radio" name="size" value="large"> Large (40 cm)</label></p>
+
+</fieldset>
+
+<fieldset>
+  <legend>Pizza Toppings</legend>
+  <p><label> <input type="checkbox" name="toppings" value="bacon"> Bacon </label></p>
+  <p><label> <input type="checkbox" name="toppings" value="cheese"> Extra Cheese </label></p>
+  <p><label> <input type="checkbox" name="toppings" value="onion" checked> Onion </label></p>
+  <p><label> <input type="checkbox" name="toppings" value="mushroom"> Mushroom </label></p>
+</fieldset>
+
+<p>Crust 
+<select name="crust" multiple>
+  <option value="c1">Normal</option>
+  <option value="c2" selected>Chicago Deep Dish (+ $2)</option>
+  <option value="c3">New York Thin</option>
+</select>
+</p>
+
+<p><label for="comments">Delivery Instructions:</label>
+  <textarea name="comments" cols="50" rows="5" maxlength="1000">
+  </textarea>
+  
+</p>
+
+<p><input type="submit" value="Continue to Step 2"></p>
+<p><input type="reset" value="Reset Values"></p>
+
+</form>
 
 </body>
 </html>
