--- a/HTML_and_CSS/Lesson10/Lesson10.html
+++ b/HTML_and_CSS/Lesson10/Lesson10.html
@@ -40,8 +40,8 @@
 
 <p><label for="comments">Delivery Instructions:</label>
   <textarea name="comments" cols="50" rows="5" maxlength="1000">
+Instructions on delivery
   </textarea>
-  
 </p>
 
 <p><input type="submit" value="Continue to Step 2"></p>
