--- a/HTML_and_CSS/Lesson11/Lesson11.html
+++ b/HTML_and_CSS/Lesson11/Lesson11.html
@@ -31,11 +31,36 @@
 
 <form method="POST" action="form.aspx">
 
+<h2>Email</h2>
+<p><label><span>Email input: </span><input type="email" name=emailInput required></label></p>
 
+<h2>Telephone</h2>
+<p><label><span>Telephone input: </span><input type="tel" name=telInput required></label> Won't do nothing, just checking</p>
 
+<h2>URL</h2>
+<p><label><span>URL input: </span><input type="url" name=urlInput required></label></p>
 
+<h2>Numeric Values</h2>
+<p><label><span>Number input: </span><input type="number" name=numberInput required></label></p>
+<p><label><span>Range input: </span><input type="range" name=rangeInput required value=42></label>Set to 42.  By default, values accepted between 0 and 100</p>
 
+<h2>Data List</h2>
+<p><label><span>Data List: </span>
+<input type="text" list=someList>
+<datalist id=someList>
+  <option label=First value="First">
+  <option label=Second value="Second">
+  <option label=Third value="Third">
+</datalist>
+</label></p>
 
+<h2>Attributes</h2>
+
+<p><label><span>autofocus: </span><input type="text" autofocus></label></p>
+<p><label><span>pattern: </span><input type="text" pattern="^\d{5}(-\d{4})?$"></label>Hint: Use a valid/invalid zip code</p>
+<p><label><span>placeholder: </span><input type="text" placeholder="Hello World"></label></p>
+<p><label><span>required: </span><input type="text" required></label></p>
+<p><label><span>step: </span><input type="number" step=5></label>Hint: Must be divisible by 5</p>
 
 <p><button>Submit</button></p>
 
