--- a/HTML_and_CSS/Lesson18/Lesson18.html
+++ b/HTML_and_CSS/Lesson18/Lesson18.html
@@ -8,7 +8,9 @@
 
 <h1>Embedding Video in HTML5</h1>
 
-
+<video src="30seconds.mp4" controls loop poster="poster.jpg">
+<p>Unfortunately your browser cannot play the video format.  You may <a href="30seconds.mp4">right-click this link and choose Save As</a> to download this video instead.</p>
+</video>
 
 <p>There's no video codec format standard.  Internet Explorer supports the popular H.264 codec (typically .mp4, but other formats may include H.264 as well).</p>
 
