--- a/Practice 1/index.html
+++ b/Practice 1/index.html
@@ -5,21 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Test Page</title>
-    <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/styles.css" media="screen">
 </head>
 <body>
-    <header>
-        <hgroup>
-            <h1>Ruben's Test page</h1>
-            <h2>Simple HTML5 page for practice</h2>
-        </hgroup>     
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <hgroup>
+        <h1>Ruben's Test page</h1>
+        <h2>Simple HTML5 page for practice</h2>
+    </hgroup>     
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="subpages/about.html">About</a></li>
+            <li><a href="subpages/contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+<section>
+<article>
+    <h1>HTML5 homepage</h1>
+    <h2>Introduction</h2>
+    <p>This page was created for practice, this is definetely not the pretiest webpage, but that was not the purpose.</p>
+    
+    <h2>Content</h2>
+    <p>There is a homepage, about and contact pages. About.html and Contact.html are in a subfolder "subpages", styles.css is 
+        in subfolder "css". That was not necessary, but why not?</p>
+</article>
+<article>
+    <h1>Lorem Ipsum</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id lobortis arcu. Vivamus diam libero, laoreet quis nibh non, 
+        eleifend sodales massa. Nulla vitae magna aliquam massa aliquet bibendum eget nec tortor. Suspendisse potenti. Etiam varius 
+        eros nec enim aliquam ultrices. Praesent a lectus ullamcorper, maximus dui vitae, semper ex. Maecenas vitae ipsum ante. Nam 
+        at pulvinar erat. In interdum sit amet dolor in blandit. Aliquam condimentum nisi nec erat tempus faucibus quis id ante. 
+        Nunc velit tellus, blandit nec nisl quis, dictum scelerisque dolor.</p>
+
+    <p>Praesent eleifend lorem quis consequat bibendum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames 
+        ac turpis egestas. Donec a massa tristique, rhoncus ipsum dignissim, hendrerit ante. Integer blandit ligula nisi, et 
+        sagittis urna convallis vel. Aliquam maximus nibh mi, eu commodo magna scelerisque vitae. Orci varius natoque penatibus 
+        et magnis dis parturient montes, nascetur ridiculus mus. Duis aliquam vitae mi a convallis. Curabitur nec pulvinar nibh. 
+        Aliquam ut nibh tincidunt, consequat lectus eu, efficitur mauris.</p>
+
+    <p>Integer quis turpis malesuada, malesuada eros non, placerat urna. Sed ultrices aliquam turpis quis ultricies. Curabitur sit 
+        amet porta odio. Curabitur fringilla felis ac leo congue tempus. Sed ultricies urna et elit accumsan malesuada. Nam 
+        volutpat varius iaculis. Nam metus orci, ultrices quis faucibus at, tincidunt eu lorem. Class aptent taciti sociosqu ad 
+        litora torquent per conubia nostra, per inceptos himenaeos. Phasellus pharetra lorem non diam ornare, sit amet condimentum 
+        sapien posuere. Pellentesque suscipit nunc lectus, vitae venenatis felis consequat eget. Integer mi dolor, molestie vel 
+        metus sit amet, malesuada scelerisque massa. Proin sit amet blandit nunc. Vestibulum in fermentum nisi. Mauris volutpat, 
+        erat vel elementum hendrerit, enim nisl laoreet quam, nec lobortis ipsum nulla vel leo.</p>
+</article>
+</section>
+    
+<footer>
+    <small>Here could be a copyright info</small>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="subpages/about.html">About</a></li>
+            <li><a href="subpages/contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</footer>
 </body>
 </html>
