--- a/Practice 1/subpages/contact.html
+++ b/Practice 1/subpages/contact.html
@@ -24,8 +24,19 @@
 <section>
 <article>
     <h1>Contact page</h1>
-    <h2>How to contact me</h2>
-    <p>Telegram/phone/fb</p>       
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, itaque asperiores magnam iste nulla quas harum quibusdam 
+        quasi totam officiis, omnis saepe alias, quos mollitia. Laudantium hic consequuntur esse numquam corporis nam eveniet quae 
+        exercitationem id nostrum, minima optio cupiditate, facere illo tempora. Dolorum molestias in amet praesentium! Velit illum 
+        commodi libero quaerat eos qui quos dolorum eveniet a deserunt rerum voluptatum eum repudiandae, minima, officiis tenetur 
+        officia non saepe soluta? Optio officia ad, tempore alias perferendis quis iste placeat iure excepturi porro, vel sit quas 
+        exercitationem aspernatur. Doloremque dolorem illo quisquam placeat magni eum nam minima, saepe minus est expedita ad 
+        distinctio excepturi dolore repellendus repellat fuga veritatis. Eius, temporibus. Dolor rem nemo earum et laboriosam 
+        dolore expedita reprehenderit, placeat, accusamus adipisci ea dignissimos? Alias cumque officia dolorum quibusdam facere, 
+        rem quo ab id repellat possimus est ipsam excepturi cum fugiat maxime quia autem ipsa perspiciatis officiis nulla 
+        voluptatem. Blanditiis tempore aspernatur ipsa unde debitis consequuntur quisquam dolorum hic, maiores dolorem in, culpa 
+        cupiditate amet ullam ab porro ipsum quae nobis! Praesentium, odit. Excepturi nesciunt quisquam hic pariatur magnam autem 
+        esse delectus deserunt saepe quam aspernatur cum, ea doloremque ipsum, impedit optio, libero odit voluptatibus velit iste 
+        modi earum.</p>       
 </article>
 </section>
                 
